--- a/public/map.html
+++ b/public/map.html
@@ -201,9 +201,9 @@
                     }
 
                     el.style.backgroundSize = '100%';
-                    el.addEventListener('click', () => {
-                    window.alert(marker.properties.message);
-                    });
+                    // el.addEventListener('click', () => {
+                    // window.alert(marker.properties.message);
+                    // });
                     
                     // Add markers to the map.
                     new mapboxgl.Marker(el)
