--- a/public/map.html
+++ b/public/map.html
@@ -17,7 +17,7 @@
             }
 
             .mapboxgl-popup-content {
-            width: fit-content;
+                width: max-content;
             }
 
             pre, pre code {
