--- a/public/sectormap.html
+++ b/public/sectormap.html
@@ -43,6 +43,6 @@
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
         <!-- <script src="map-styles.js"></script> -->
-        <script src="map.js"></script>
+        <script src="sectormap.js"></script>
     </body>
 </html>
