Removed map key

--- a/public/sectormap.html
+++ b/public/sectormap.html
@@ -51,7 +51,7 @@
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
         <!-- <script src="map-styles.js"></script> -->
-        <div id='mgl-map-overlay'>
+        <!-- <div id='mgl-map-overlay'>
             <strong>Map key</strong>
             <ul>
                 <li>Thick solid line: Standard sector boundary</li>
@@ -59,7 +59,7 @@
                 <li>Thick dashed line: TMA volume boundary</li>
                 <li>Thin dotted line: Tower volume boundary</li>
             </ul>
-        </div>
+        </div> -->
         <script src="sectormap.js"></script>
     </body>
 </html>
