--- a/public/sectormap.html
+++ b/public/sectormap.html
@@ -105,9 +105,9 @@
             </svg>
         </button>
         <div id="boxBody">
-            <img src="/static/vatpac-logo2.png" alt="VATPAC logo" width="25%" height="25%"
-                style="padding-top: 12px;"><br />
-            <p style="text-decoration: underline; text-decoration-color: #3b8df9; text-decoration-thickness: 1px; text-transform: uppercase; font-size:12px;">Aeronautical Positions Chart</p>
+            <!--<img src="/static/vatpac-logo2.png" alt="VATPAC logo" width="25%" height="25%"
+                style="padding-top: 12px;"><br />-->
+            <p style="text-decoration: underline; text-decoration-color: #3b8df9; text-decoration-thickness: 1px; text-transform: uppercase; font-size:12px;">VATPAC Aeronautical Positions Chart</p>
             <!--Dataset goes here. In sectormap.js-->
         </div>
     </div>
