3d mapping, poly fill

--- a/public/map.html
+++ b/public/map.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <!-- <title>VATSIM traffic</title> -->
-        <script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
-        <link href='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css' rel='stylesheet' />
+        <title>VATSIM Traffic Map (by VATPAC)</title>
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
         <style>
             body {
               margin: 0;
