--- a/public/sectormap.html
+++ b/public/sectormap.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <!-- <title>VATSIM traffic</title> -->
+    <title>VATPAC Airspace Map</title>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
