--- a/public/map.html
+++ b/public/map.html
@@ -7,6 +7,7 @@
             body {
               margin: 0;
               padding: 0;
+              font-family: Helvetica Neue,Arial,Helvetica,sans-serif;
             }
       
             #map {
@@ -25,10 +26,33 @@
                 /* line-height: 1.4; */
                 white-space: pre-line;
             }
+
+            #mgl-map-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            background-color: #fff;
+            padding: 8px;
+            margin-top: 8px;
+            text-align: center;
+
+            li, ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                font-size: 14px;
+            }
+        }
           </style>
     </head>
     <body>
         <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+        <div id='mgl-map-overlay' style="border-radius: 1em; margin-bottom: 1em; margin-left: 1em; box-shadow: 1em; width:200px;">
+            <div id="atc-online">
+                <strong>ATC Online</strong>
+            </div>
+        </div>
         <div id='map'></div>
         <!-- <nav id="listing-group" class="listing-group">
             <input type="checkbox" id="declutter" checked="checked">
